# RedBus-clone

./: .dockerignore  .gitignore  DEMO_SCRIPT.md  DOCKER.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.example
backend/: .dockerignore  .gitignore  API.md  Api-architecture.md  Architecture.md  DirectoryStructure.md  Dockerfile  Dockerfile.dev  Specifications.md  alembic.ini  dummy.py  pyproject.toml  seed_data.py
backend/app/: config.py  deps.py  main.py
backend/app/core/: logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: booking.py  booking_seat.py  bus.py  city.py  otp.py  seat.py  trip.py  user.py
backend/app/routes/: auth_routes.py  booking_routes.py  bus_routes.py  city_routes.py  user_routes.py
backend/app/schemas/: auth.py  booking.py  bus.py  city.py  user.py
backend/app/services/: auth_service.py  booking_service.py  bus_service.py  city_service.py  user_service.py
backend/migrations/: env.py
backend/migrations/versions/: bd51210351dd_add_trips_table.py  c47d33519a9a_init_tables.py
backend/tests/: test_auth.py
backend/tests/integration tests/: test_auth.py  test_booking.py  test_bus.py  test_city.py  test_user.py
backend/tests/unit tests/app/core/: test_security.py
backend/tests/unit tests/app/services/: test_auth_service.py  test_booking_service.py  test_bus_service.py  test_city_service.py  test_user_service.py
client/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.test  index.html  nginx.conf  package-lock.json  package.json  (+2 more)
(+83 files in other folders)
